# AI

./: CMakeLists.txt  README.md  linux-filesystem-runbook.md  native_functions.yaml
examples/: demo.py
python/aten_codegen_example/: __init__.py  _ops.pyi
src/: generated_bindings.cpp  native_ops.cpp  native_ops.h  tensor.cpp  tensor.h
tools/: codegen.py
